CHANGELOG.mdの更新: Analyzerにload系メソッドを追加し、DataGroupにadd_unitメソッドを追加。wavデータユニットファクトリの作成メソッドを修正。テストケースを追加。

--- a/notebooks/test_note.ipynb
+++ b/notebooks/test_note.ipynb
@@ -7,13 +7,185 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(\"../src\"))\n",
+    "from cores.analyzer import Analyzer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5c845fea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyzer = Analyzer('/home/ymd/program/python/analyzer/data/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4472a182",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['wav']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analyzer.group_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b663153f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_index</th>\n",
+       "      <th>left</th>\n",
+       "      <th>right</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-45</td>\n",
+       "      <td>-32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-45</td>\n",
+       "      <td>-122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-202</td>\n",
+       "      <td>-110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147705</th>\n",
+       "      <td>147705</td>\n",
+       "      <td>-70</td>\n",
+       "      <td>-71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147706</th>\n",
+       "      <td>147706</td>\n",
+       "      <td>-48</td>\n",
+       "      <td>-49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147707</th>\n",
+       "      <td>147707</td>\n",
+       "      <td>-25</td>\n",
+       "      <td>-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147708</th>\n",
+       "      <td>147708</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>-5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147709</th>\n",
+       "      <td>147709</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>147710 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sample_index  left  right\n",
+       "0                  0   -45    -32\n",
+       "1                  1    50   -108\n",
+       "2                  2   -45   -122\n",
+       "3                  3   -21     93\n",
+       "4                  4  -202   -110\n",
+       "...              ...   ...    ...\n",
+       "147705        147705   -70    -71\n",
+       "147706        147706   -48    -49\n",
+       "147707        147707   -25    -25\n",
+       "147708        147708    -5     -5\n",
+       "147709        147709     1      1\n",
+       "\n",
+       "[147710 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analyzer.get_group('wav').get_unit('和太鼓でドン_waveform').df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4c4fa46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv-test",
    "language": "python",
    "name": "python3"
   },
